primitives/api/test/tests/ui/mock_only_one_error_type.stderr
error: Error type can not change between runtime apis
  --> $DIR/mock_only_one_error_type.rs:23:3
   |
23 |         type Error = u64;
   |         ^^^^

error: First error type was declared here.
  --> $DIR/mock_only_one_error_type.rs:17:16
   |
17 |         type Error = u32;
   |                      ^^^

error[E0277]: the trait bound `u32: std::convert::From<std::string::String>` is not satisfied
   --> $DIR/mock_only_one_error_type.rs:17:16
    |
17  |         type Error = u32;
    |                      ^^^ the trait `std::convert::From<std::string::String>` is not implemented for `u32`
    |
   ::: $WORKSPACE/primitives/api/src/lib.rs
    |
    |     type Error: std::fmt::Debug + From<String>;
    |                                   ------------ required by this bound in `sp_api_hidden_includes_DECL_RUNTIME_APIS::sp_api::ApiErrorExt`
    |
    = help: the following implementations were found:
              <u32 as std::convert::From<bool>>
              <u32 as std::convert::From<char>>
              <u32 as std::convert::From<h2::frame::reason::Reason>>
              <u32 as std::convert::From<h2::frame::reason::Reason>>
            and 18 others
